# little-lang

./: .gitignore  CMakeLists.txt  Makefile  README.md  baseast.cpp  baseast.hpp  codegenvisitor.cpp  consts.hpp  corners.org  correct1.lil  correct2.lil  correct3.lil  correct4.lil  driver.sh  e1.lil  err1.lil  err2.lil  err3.lil  lex.yy.c  lexer.l  lil.lil  man.lil  parse.cpp  parser.cpp  printvisitor.cpp  runtime.c  sample.lil  symtab.cpp  symtab.hpp  typecheckervisitor.cpp  utils.hpp  visitor.cpp  visitor.hpp  wrapper_script
benchmarks/: ackermann.lil
failing-tests/: err2.lil  incomplete_array_decls.lil
passing-tests/: correct1.lil  correct2.lil  is_array_palindrome.lil  pascal_triangle.lil  sum_factorial.lil
programs/: a.lil  a.out  b.lil  lex.yy.c  lexer.l  txt
scripts/: benchmarkIntWidth.sh
src/: baseast.cpp  baseast.hpp  codegenvisitor.cpp  consts.hpp  parser.cpp  symtab.cpp  typecheckervisitor.cpp  visitor.hpp
